<resources>
    <string name="app_name">Play</string>
    <string name="play">Play</string>
    <string name="image_description">image1</string>
    <string name="image_description4">image4</string>
    <string name="Men">Men</string>
    <string name="Coed">Co-ed</string>
    <string name="women">Women</string>
    <string name="image4">Image4</string>
    <string name="next">Next</string>
    <string name="image2">image2</string>
    <string name="beginner">Beginner</string>
    <string name="expert">Expert</string>
    <string name="image3">image3</string>
    <string name="let_find_club_for_you">let find club for you</string>
</resources>