<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LeagueActivity">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/image4"
        android:contentDescription="@string/image4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ToggleButton
            android:id="@+id/menLeagueBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="menOnclick"
            android:text="@string/Men"
            android:textOn="@string/Men"
            android:textOff="@string/Men"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:fontFamily="serif"
            android:textAlignment="center"
            android:padding="8dp"
            android:background="@drawable/button_toggle"/>

        <ToggleButton
            android:id="@+id/womenLeagueBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="womenOnclick"
            android:text="@string/women"
            android:textOn="@string/women"
            android:textOff="@string/women"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:fontFamily="serif"
            android:textAlignment="center"
            android:padding="8dp"
            android:background="@drawable/button_toggle"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"/>

        <ToggleButton
            android:id="@+id/coedLeagueBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="coedOnclick"
            android:text="@string/Coed"
            android:textOn="@string/Coed"
            android:textOff="@string/Coed"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:fontFamily="serif"
            android:textAlignment="center"
            android:padding="8dp"
            android:background="@drawable/button_toggle"/>

    </LinearLayout>

    <Button
        android:id="@+id/LeagueNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:fontFamily="serif"
        android:onClick="leagueNextOnclick"
        android:padding="8dp"
        android:text="@string/next"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttons" />
</androidx.constraintlayout.widget.ConstraintLayout>